--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
         <version>${org.primefaces.version}</version>
     </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>5.10.1</version>
+        </dependency>
 
     <dependency>
         <groupId>org.springframework</groupId>
